[package]
name = "rython"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rython"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
geo = { version = "0.25.0"}
geojson = { version = "0.24.1" }
serde_json = { version = "1.0.96"}
